--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,18 @@
 body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    color: grey;
+    font-size: 16px;
+
+}
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid grey;
+    margin: 0 auto;
+}
+
+#container h1 {
+    font-size: 20px;
 }
